# aoc2023

./: aoc2023.cabal
src/aoc2023/: Aoc2023.hs
src/aoc2023-exe/: Main.hs
src/aoc2023-lib/: Ante.hs
src/aoc2023-lib/Aoc2023/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Solution.hs  Types.hs
src/aoc2023-test/: TestMain.hs
src/aoc2023-test-exe/: Main.hs
src/aoc2023-test/Ante/: Test.hs
src/aoc2023-test/Aoc2023/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs
